# morsel

./: .gitignore  AGENTS.md  Cargo.toml  README.md
benches/: mesh_ops.rs
examples/: gen_bunny_uvs.rs
src/: error.rs  lib.rs
src/algo/: curvature.rs  mod.rs  progress.rs  remesh.rs  smooth.rs  subdivide.rs
src/algo/decimate/: mod.rs  qem.rs
src/algo/geodesic/: dijkstra.rs  heat.rs  mod.rs
src/algo/parameterize/: arap.rs  lscm.rs  mod.rs  sparse.rs  uv.rs
src/algo/remesh/: anisotropic.rs  cvt.rs  isotropic.rs  mod.rs
src/algo/subdivide/: catmull_clark.rs  loop_subdivision.rs  mod.rs
src/io/: gltf.rs  mod.rs  obj.rs  ply.rs  stl.rs
src/mesh/: builder.rs  halfedge.rs  index.rs  mod.rs
