[package]
name = "morsel"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
description = "A comprehensive 3D mesh processing library for geometry processing research"
repository = "https://github.com/timthirion/morsel"
keywords = ["mesh", "geometry", "half-edge", "computational-geometry", "3d"]
categories = ["algorithms", "graphics", "mathematics", "science"]

[dependencies]
# Linear algebra
nalgebra = "0.33"

# Exact geometric predicates
exactum = { path = "../exactum" }

# Approximate geometry operations
approxum = { path = "../approxum" }

# File I/O
tobj = "4.0"           # OBJ format
stl_io = "0.7"         # STL format
ply-rs = "0.1"         # PLY format
gltf = "1.4"           # glTF format

# Error handling
thiserror = "1.0"

# CLI dependencies (optional, for morsel binary)
clap = { version = "4", features = ["derive"], optional = true }

# Viewer dependencies (optional, for viewer binary)
wgpu = { version = "24", optional = true }
winit = { version = "0.30", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
log = { version = "0.4", optional = true }
image = { version = "0.25", optional = true }

[features]
default = []
cli = ["clap"]
viewer = ["wgpu", "winit", "pollster", "bytemuck", "env_logger", "log", "image"]

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
rand = "0.8"
tempfile = "3.10"

[[bin]]
name = "morsel"
path = "src/bin/morsel/main.rs"
required-features = ["cli"]

[[bin]]
name = "morsel-view"
path = "src/bin/morsel-view/main.rs"
required-features = ["viewer"]

[[bench]]
name = "mesh_ops"
harness = false
